// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`components/IconToggle can be colored 1`] = `
<i
  aria-pressed={false}
  arria-label={null}
  className="mdc-icon-toggle material-icons"
  onClick={[Function]}
  onKeyUp={[Function]}
  role="button"
  style={
    Object {
      "color": "pink",
    }
  }
  tabIndex="0"
>
  bar
</i>
`;

exports[`components/IconToggle can be disabled 1`] = `
<i
  aria-pressed={false}
  arria-label={null}
  className="mdc-icon-toggle material-icons mdc-icon-toggle--disabled"
  onClick={[Function]}
  onKeyUp={[Function]}
  role="button"
  style={Object {}}
  tabIndex="0"
>
  bar
</i>
`;

exports[`components/IconToggle can be pressed 1`] = `
<i
  aria-pressed={true}
  arria-label={null}
  className="mdc-icon-toggle material-icons"
  onClick={[Function]}
  onKeyUp={[Function]}
  role="button"
  style={Object {}}
  tabIndex="0"
>
  foo
</i>
`;

exports[`components/IconToggle can have a label 1`] = `
<i
  aria-pressed={false}
  arria-label={null}
  className="mdc-icon-toggle material-icons"
  onClick={[Function]}
  onKeyUp={[Function]}
  role="button"
  style={Object {}}
  tabIndex="0"
>
  bar
</i>
`;

exports[`components/IconToggle can have a labelOff 1`] = `
<i
  aria-pressed={false}
  arria-label="foobar"
  className="mdc-icon-toggle material-icons"
  onClick={[Function]}
  onKeyUp={[Function]}
  role="button"
  style={Object {}}
  tabIndex="0"
>
  bar
</i>
`;
